# job-market-ai-agent

./: .gitignore  README.md  pyproject.toml
crawling/: .env.example  .gitignore  pyproject.toml
crawling/apps/analyzer/: analyze_jobs.py
crawling/apps/api/: README.md
crawling/apps/bot/: discord_job_bot.py
crawling/apps/collector/: README.md  collect_saramin.py  report_quality.py
crawling/apps/pipeline/: daily_job_pipeline.py  list_runs.py  retry_run.py  show_run.py
crawling/apps/qa/: README.md  ask_jobs.py
crawling/apps/reporter/: export_jobs.py
crawling/docs/: ROADMAP.md
crawling/scripts/: run_daily_pipeline.bat  run_discord_bot.bat
crawling/src/job_market_ai_agent/analysis/: models.py  ollama_client.py  openai_client.py  prompts.py
crawling/src/job_market_ai_agent/bot/: discord_job_bot.py
crawling/src/job_market_ai_agent/collectors/: base.py  saramin.py
crawling/src/job_market_ai_agent/core/: models.py
crawling/src/job_market_ai_agent/notifications/: __init__.py  discord.py  env.py
crawling/tests/analysis/: test_analysis_models.py  test_ollama_client.py  test_openai_client.py  test_prompts.py
crawling/tests/bot/: test_discord_job_bot.py
crawling/tests/core/: test_models.py
crawling/tests/notifications/: test_discord.py  test_env.py
crawling/tests/pipeline/: test_daily_job_pipeline.py  test_run_history.py
crawling/tests/qa/: test_answer.py  test_query.py  test_search.py  test_service.py
crawling/tests/quality/: test_report.py
crawling/tests/reporting/: test_export.py  test_summary.py
crawling/tests/storage/: test_latest.py
(+31 files in other folders)
