[project]
name = "job-market-ai-agent"
version = "0.1.0"
description = "Daily job posting collector, analyzer, Q&A, and notification agent."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "discord.py>=2.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
